--- a/05weather.html
+++ b/05weather.html
@@ -45,7 +45,7 @@
         //＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
         //MAP表示処理
         //＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝
-        const key   = "03fe787d9b26aa4ffef4cbdf2a7eccd9";  
+        const key   = "";//キーが入るところ  
         const lat   = "0";   //(ジーズ福岡の緯度　33.586641), 
         const lon   = "0";  //(ジーズ福岡の軽度　130.394471)
         const icon  = "http://openweathermap.org/img/wn/"; //ICONにアクセスするURL
